Standardize exception handling, tests, and duplicate checks